// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with multiple expenses 1`] = `
<p>
  Viewing 
  3
   
  expenses
   totalling 
  $1,141.95
   
</p>
`;

exports[`should render ExpenseSummary with single total 1`] = `
<p>
  Viewing 
  1
   
  expense
   totalling 
  $1.95
   
</p>
`;
